# qt-qml-practice

./: .gitignore  Basic.qml  CMakeLists.txt  Main.qml  cppworker.cpp  cppworker.h  howCleaver.qrc  main.cpp
2_2_ContextProperties/: ContextProperties.qml
2_DissectingQmlSyntax/: PropertyBindings.qml  PropertyChangeHandlers.qml  QtGlobalObject.qml  dataTypes.qml
3_BasicElements/: Images.qml  Rectangles.qml
4_CustomComponentsAndModules/: GetButtons.qml  LoadButtonsFromModule.qml  MButton.qml  custom_component_in_path.qml  custom_components.qml
5_Signal/: AttachedSignalHandlers.qml  ConnectASignalToASignal.qml  ConnectSignaltoMethod.qml  Connections.qml  CustomSignals.qml  PropertyChangeSignal.qml  SendSignalsAccrossComponents.qml  SignalHandler.qml  SignalHandlers.qml  SignalParameters.qml
5_Signal/SendSignalsAccrossComponents/: Notifier.qml  Receiver.qml
5_Signal/Usecase/: ColorPicker.qml  DisplayArea.qml  UseMain.qml
6_UserInput/: 1_TextInput.qml  3_TextEdit.qml  6_KeyNavigation.qml  7_FocusScope.qml  LabeledTextInput.qml
7_Javascript/: 4_JsDirectImport.qml  5_JsIndirectImport.qml  6_QtInclude.qml  6_util1.js  6_util2.js  7_JsModules.qml  7_util1.mjs
8_Positioning/: 4_AnchorParentSibiling.qml
9_QtQuickControls/: 3_BusyIndicator.qml
custom_buttons/: BlueButton.qml  CMakeLists.txt  GrayButton.qml  GreenButton.qml
